# Simple-Makefile

./: CMakeLists.txt  Makefile  Makefile.win  README.md  test.cpp
